# immediate-mode

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.hooks/: pre-commit.sh
benches/: primitives.rs
dev/: Cargo.toml
dev/benches/: primitives.rs
dev/examples/glium/: main.rs
dev/test/: test.rs
examples/glium/: main.rs
src/: color.rs  draw.rs  lib.rs  math.rs  text.rs
