[package]
name = "immediate-mode"
version = "0.0.1"
authors = ["Gwen Lofman <Gwen@Lofman.io>"]
edition = "2018"

[dependencies]

[dev-dependencies]
glium = "*" # example used to develop the library
criterion = "0.3" # benchmarking

[[example]]
name = "glium"

[[bench]]
name = "primitives"
harness = false