[package]
name = "immediate-mode"
version = "0.0.1"
authors = ["Gwen Lofman <Gwen@Lofman.io>"]
edition = "2018"

[dependencies]

[dev-dependencies]
# Add dev dependencies to ./dev
#
# Adding them here will require compilation of heavy dependencies
# just for running simple tests on the core library

[workspace]
members = ["dev"]